--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -31,7 +31,7 @@
 
   </ion-grid>
   <ion-fab bottom right>
- <button ion-fab color="danger">
+ <button ion-fab color="danger" (click)="addNewRoutine()">
     <ion-icon name="add"></ion-icon>
   </button>
   </ion-fab>
